last version (add new chat chanel)

--- a/src/app/barbeur-profile/barbeur-profile.page.html
+++ b/src/app/barbeur-profile/barbeur-profile.page.html
@@ -92,7 +92,7 @@
 
                    
     <ion-fab vertical="bottom"  horizontal="end"  slot="fixed"> 
-      <ion-fab-button color="success" (click)="call()"> 
+      <ion-fab-button color="success" (click)="chat()"> 
         <ion-icon name="logo-whatsapp"></ion-icon>
       </ion-fab-button>   
     </ion-fab>
