--- a/src/app/direction/direction.page.html
+++ b/src/app/direction/direction.page.html
@@ -7,7 +7,7 @@
         </ion-buttons>
     </div>
     <div id="map8" class="map"></div>
-    <ion-item lines="none">
+    <ion-item lines="none" (click)="openWith()">
         <img slot="start" class="salon_img" src="../../assets/images/salon1.png">
         <ion-label>
             <p class="salon_name">{{salon?.name}}</p>
