--- a/src/app/first-page/first-page.page.html
+++ b/src/app/first-page/first-page.page.html
@@ -1,9 +1,16 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>first-page</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
 
 </ion-content>
+
+<ion-footer>
+  <div class="footer">
+    <div class="a">
+      <p>Déjà client ?</p>
+      <ion-button expand="block" color="secondary" (click)="login()">SE CONNECTER</ion-button>
+    </div>
+    <div class="a">
+      <p>Nouveau client ?</p>
+      <ion-button expand="block" color="warning" (click)="continuer()">CONTINUER</ion-button>
+    </div>
+  </div>
+</ion-footer>
