--- a/src/global.scss
+++ b/src/global.scss
@@ -87,6 +87,12 @@
         // height: 25%!important;
         --backdrop-opacity: var(--ion-backdrop-opacity, 0.1) !important;
     }
+    .OpenWithPage {
+        padding: 0;
+        padding-top: 490px!important;
+        // height: 25%!important;
+        --backdrop-opacity: var(--ion-backdrop-opacity, 0.1) !important;
+    }
 
     .sc-ion-searchbar-ios-h {
         --background: white !important;
