--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,4 +1,3 @@
-
 <ion-header class="ion-no-border">
   <ion-toolbar>
     <ion-item lines="none">
@@ -21,37 +20,53 @@
 
     <div *ngSwitchCase="'salon'">
 
-      <div class="salon-item"  *ngFor="let item of salons" style="background-image:url('http://157.230.232.108{{ item?.Logo?.url }}');background-size:cover;" (click)="salonProfile(item)"  >
+      <!-- <div class="salon-item"  *ngFor="let item of salons" style="background-image:url('http://157.230.232.108{{ item?.Logo?.url }}');background-size:cover;"
+        (click)="salonProfile(item)"  >
         <ion-avatar>
-            <img src="http://157.230.232.108{{ item?.Logo?.url }}">         
-        </ion-avatar>
-        <div class="salon-infos">
-            <div>
-                <a class="salon-name" >{{ item?.name }}</a>                        
-                <p class="salon-addr">{{ item?.address }}</p>
-            </div>                           
-        </div>    
-    </div> 
+          <img src="http://157.230.232.108{{ item?.Logo?.url }}">         </ion-avatar> <div class="salon-infos">
+          <div>
+            <a class="salon-name" >{{ item?.name }}</a>                        
+            <p class="salon-addr">{{ item?.address }}</p>
+          </div>                    
+      </div> -->
 
-    </div>
+        <div class="salon-item-bis"  *ngFor="let item of salons" (click)="salonProfile(item)">
+          <div class="salon-img"
+            style="background-image:url('http://157.230.232.108{{ item?.Logo?.url }}');background-size:cover;"></div>
+          <div class="salon-infos">
+            <h1 class="no-padding salon-name" >{{ item?.name }}</h1>                        
+            <p class="salon-addr">{{ item?.address }}</p>
+          </div>
+        </div> 
 
-    <div [hidden]="select !='barber'">
-      
-      <div class="salon-item"  *ngFor="let item of barbers" style="background-image:url('http://157.230.232.108{{ item?.logo?.url }}');background-size:cover;" (click)="barbeurProfile(item)" >
-        <ion-avatar>
-            <img src="http://157.230.232.108{{ item?.logo?.url }}">         
-        </ion-avatar>
-        <div class="salon-infos">
+      </div>
+
+      <div [hidden]="select !='barber'">
+
+        <!-- <div class="salon-item"  *ngFor="let item of barbers" style="background-image:url('http://157.230.232.108{{ item?.logo?.url }}');background-size:cover;"
+          (click)="barbeurProfile(item)"  >
+          <ion-avatar>
+            <img src="http://157.230.232.108{{ item?.logo?.url }}">         </ion-avatar> <div class="salon-infos">
             <div>
-                <a class="salon-name" >{{ item?.name }}</a>
-                <p class="salon-addr">{{ item?.address }}</p>
-            </div>                           
-        </div>    
-    </div> 
-    
-    </div>
+              <a class="salon-name" >{{ item?.name }}</a>
+              <p class="salon-addr">{{ item?.address }}</p>
+            </div>                    
+        </div>     -->
+
+        <div class="barber-item-bis"  *ngFor="let item of barbers" (click)="barbeurProfile(item)">
+          <div class="barber-img"
+            style="background-image:url('http://157.230.232.108{{ item?.Logo?.url }}');background-size:cover;">
+          <ion-avatar> <ion-icon name="walk-outline" size="large" ></ion-icon></ion-avatar> 
+          </div>
+          <div class="barber-infos">
+            <h1 class="no-padding barber-name" >{{ item?.name }}</h1>                        
+            <p class="barber-addr">{{ item?.address }}</p>
+          </div>
+        </div> 
+
+      </div>
+
   </div>
-
 
 
 </ion-content>
