--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -23,38 +23,118 @@
   }
 }
 
-ion-content{
+ion-content {
 
-.salon-item
-{
+  .salon-item {
     height: 170px;
     margin-left: 17px;
     margin: 17px;
     border: 0.75px solid black;
     position: relative;
-    .salon-infos
-    {
-        height: 50px;
-        width: 100%;
-        background-color: var(--ion-black);
-        opacity: .75;
-        position: absolute;
-        bottom: 0;
-        .salon-name
-        {
-            font-size: 13px;
-            
-            font-family: var(--bold-font);
-            color: white;
-        }
-        .salon-addr
-        {
-            font-size: 11px;
-            font-style: oblique;
-            font-family: var(--regular-font);
-            color: var(--gray-color);
-            padding-right: 10px;
-        }
+
+    .salon-infos {
+      height: 50px;
+      width: 100%;
+      background-color: var(--ion-black);
+      opacity: .75;
+      position: absolute;
+      bottom: 0;
+
+      .salon-name {
+        font-size: 13px;
+
+        font-family: var(--bold-font);
+        color: white;
+      }
+
+      .salon-addr {
+        font-size: 11px;
+        font-style: oblique;
+        font-family: var(--regular-font);
+        color: var(--gray-color);
+        padding-right: 10px;
+      }
     }
-}
+  }
+
+  .salon-item-bis {
+    height: 200px;
+    border: 0.75px solid black;
+    margin: 9px;
+    border-radius: 2%;
+    width: 45%;
+    display: inline-block;
+    position: relative;
+
+    .salon-img {
+      height: 125px;
+      width: 100%;
+
+    }
+
+    .salon-infos {
+      height: 75px;
+      width: 100%;
+      background-color: var(--ion-black);
+      opacity: .75;
+      text-align: center;
+
+      .salon-name {
+        font-family: var(--bold-font);
+
+        color: white;
+        font-size: 13px;
+        margin: 0px;
+      }
+
+      .salon-addr {
+        color: lightgray;
+        font-size: 11px;
+        margin: 0px;
+        font-family: var(--regular-font);
+        color: var(--gray-color);
+
+      }
+    }
+  }
+
+  .barber-item-bis {
+    height: 200px;
+    border: 0.75px solid black;
+    margin: 9px;
+    border-radius: 2%;
+    width: 45%;
+    display: inline-block;
+    position: relative;
+
+    .barber-img {
+      height: 125px;
+      width: 100%;
+
+    }
+
+    .barber-infos {
+      height: 75px;
+      width: 100%;
+      background-color: var(--ion-black);
+      opacity: .75;
+      text-align: center;
+      .barber-name {
+        font-family: var(--bold-font);
+
+        color: white;
+        font-size: 13px;
+        margin: 0px;
+      }
+
+      .barber-addr {
+        color: lightgray;
+        font-size: 11px;
+        margin: 0px;
+        font-family: var(--regular-font);
+        color: var(--gray-color);
+
+      }
+    }
+  }
 }
