--- a/src/app/open-with/open-with.page.html
+++ b/src/app/open-with/open-with.page.html
@@ -1,6 +1,6 @@
 <ion-header class="ion-no-border">
   <ion-toolbar>
-    <ion-title mode="ios">Ouvrir avec</ion-title>
+    <ion-title mode="ios">Ouvrir avec ....</ion-title>
   </ion-toolbar>
 </ion-header>
 
