--- a/src/app/location/location.page.scss
+++ b/src/app/location/location.page.scss
@@ -15,12 +15,12 @@ ion-content {
         bottom: 5%;
         overflow: scroll;
         display: inline-flex;
-        width: auto;
+        width: 100%;
         left: 0;
         right: 0;
         .scroll-div {
             background: white;
-            min-width: 315px;
+            width: 100%;
             border-radius: 15px;
             margin-right: 15px;
             ion-item {
